feat: :art: Terminacion del header html y css
Se agregan todas las imagenes del carrusel y se da finalizacion al header

--- a/index.html
+++ b/index.html
@@ -7,13 +7,50 @@
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
-  <header>
-  
-    <div >
-      <h1>Dylan Acevedo</h1>
-      <h2>Desarrollador de Software</h2>
+  <!-- Header -->
+  <header id="inicio">
+    <!-- Carrusel de fondo -->
+    <div class="galeria-carrusel">
+      <div class="galeria-track">
+        <!-- Imágenes del carrusel -->
+        <div class="img-box"><img src="./imgs/1.webp" alt="Imagen 1"></div>
+        <div class="img-box"><img src="./imgs/2.webp" alt="Imagen 2"></div>
+        <div class="img-box"><img src="./imgs/3.webp" alt="Imagen 3"></div>
+        <div class="img-box"><img src="./imgs/4.webp" alt="Imagen 4"></div>
+        <div class="img-box"><img src="./imgs/5.webp" alt="Imagen 5"></div>
+        <div class="img-box"><img src="./imgs/6.webp" alt="Imagen 6"></div>
+        <div class="img-box"><img src="./imgs/7.webp" alt="Imagen 7"></div>
+        <div class="img-box"><img src="./imgs/8.webp" alt="Imagen 8"></div>
+        <div class="img-box"><img src="./imgs/9.webp" alt="Imagen 9"></div>
+        <div class="img-box"><img src="./imgs/10.webp" alt="Imagen 10"></div>
+        <div class="img-box"><img src="./imgs/11.webp" alt="Imagen 11"></div>
+        <div class="img-box"><img src="./imgs/12.webp" alt="Imagen 12"></div>
+        <div class="img-box"><img src="./imgs/13.webp" alt="Imagen 13"></div>
+        <div class="img-box"><img src="./imgs/14.webp" alt="Imagen 14"></div>
+        <div class="img-box"><img src="./imgs/15.webp" alt="Imagen 15"></div>
+        <div class="img-box"><img src="./imgs/16.webp" alt="Imagen 16"></div>
+        <div class="img-box"><img src="./imgs/17.webp" alt="Imagen 17"></div>
+        <div class="img-box"><img src="./imgs/18.webp" alt="Imagen 18"></div>
+        <div class="img-box"><img src="./imgs/19.webp" alt="Imagen 19"></div>
+        <div class="img-box"><img src="./imgs/20.webp" alt="Imagen 20"></div>
+        <div class="img-box"><img src="./imgs/21.webp" alt="Imagen 21"></div>
+        <div class="img-box"><img src="./imgs/22.webp" alt="Imagen 22"></div>
+        <div class="img-box"><img src="./imgs/23.webp" alt="Imagen 23"></div>
+        <div class="img-box"><img src="./imgs/24.webp" alt="Imagen 24"></div>
+        <div class="img-box"><img src="./imgs/25.webp" alt="Imagen 25"></div>
+        <div class="img-box"><img src="./imgs/26.webp" alt="Imagen 26"></div>
+        <div class="img-box"><img src="./imgs/27.webp" alt="Imagen 27"></div>
+        <div class="img-box"><img src="./imgs/28.webp" alt="Imagen 28"></div>
+        <div class="img-box"><img src="./imgs/29.webp" alt="Imagen 29"></div>
+        <div class="img-box"><img src="./imgs/30.webp" alt="Imagen 30"></div>
+      </div>
     </div>
     
+    <!-- Títulos con fondo de vidrio -->
+     <div>
+    <h1 class="glass-box">Dylan Acevedo</h1>
+    <h2 class="glass-box2">Desarrollador de Software</h2>
+    </div>
   </header>
 
   <main>
@@ -31,7 +68,10 @@
     <section >
       <h3>Sobre mí</h3>
       <p>
-        Soy un apasionado por la tecnología y actualmente me encuentro en formación como desarrollador de software en el bootcamp Campuslands. Me interesa crear soluciones innovadoras que puedan llevarse al mundo real, tanto de manera individual como en equipo. Mi experiencia previa en el ámbito laboral me ha brindado habilidades sólidas de liderazgo, comunicación y gestión del tiempo, que aplico en cada proyecto técnico que emprendo. Me adapto fácilmente a los cambios, manejo la presión con estrategia y disfruto colaborar con equipos multidisciplinarios.
+        Soy un apasionado por la tecnología y actualmente me encuentro en formación como desarrollador de software en el bootcamp Campuslands.
+         Me interesa crear soluciones innovadoras que puedan llevarse al mundo real, tanto de manera individual como en equipo. Mi experiencia previa 
+         en el ámbito laboral me ha brindado habilidades sólidas de liderazgo, comunicación y gestión del tiempo, que aplico en cada proyecto técnico que emprendo.
+          Me adapto fácilmente a los cambios, manejo la presión con estrategia y disfruto colaborar con equipos multidisciplinarios.
       </p>
     </section>
 
