feat: :art: Creacion Barra navegacion
Se da finalizacion a la barra de navegacion en html y css

--- a/index.html
+++ b/index.html
@@ -48,22 +48,23 @@
     
     <!-- Títulos con fondo de vidrio -->
      <div>
-    <h1 class="glass-box">Dylan Acevedo</h1>
-    <h2 class="glass-box2">Desarrollador de Software</h2>
+        <h1 class="glass-box">Dylan Acevedo</h1>
+        <h2 class="glass-box2">Desarrollador de Software</h2>
     </div>
   </header>
 
   <main>
+    <!-- Barra navegacion -->
     <nav>
-      <ul>
-        <li><a href="#sobre-mi" >Sobre mí</a></li>
-        <li><a href="#experiencia" >Experiencia</a></li>
-        <li><a href="#educacion" >Educación</a></li>
-        <li><a href="#habilidades">Habilidades</a></li>
-        <li><a href="#contacto" >Contacto</a></li>
-        <li><a href="#programando">Media</a></li>
-      </ul>
-    </nav>
+        <ul>
+          <li><a href="#sobre-mi">Sobre mí</a></li>
+          <li><a href="#experiencia">Experiencia</a></li>
+          <li><a href="#educacion">Educación</a></li>
+          <li><a href="#habilidades">Habilidades</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+          <li><a href="#programando">Media</a></li>
+        </ul>
+      </nav>
 
     <section >
       <h3>Sobre mí</h3>
