feat: :art: Arreglos de codigo
Cambios en el codigo para arrreglo de tiktok y otros

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <a href="https://github.com/Deamacevedo" target="_blank" rel="noopener noreferrer">
             <img src="./icons/github_light.svg" alt="GitHub" class="icon">
           </a>
-          <a href="https://www.tiktok.com/@dylanacevedoo" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.tiktok.com/@dylanacevedo" target="_blank" rel="noopener noreferrer">
             <img src="./icons/tiktok.svg" alt="TikTok" class="icon">
           </a>
           <a href="https://youtube.com/@Deamacevedo" target="_blank" rel="noopener noreferrer">
@@ -212,7 +212,7 @@
           <a href="https://youtube.com/@Deamacevedo" target="_blank" rel="noopener noreferrer">
             <img src="./icons/youtube.svg" alt="YouTube">
           </a>
-          <a href="https://www.tiktok.com/@dylanacevedoo" target="_blank" rel="noopener noreferrer">
+          <a href="https://www.tiktok.com/@dylanacevedo" target="_blank" rel="noopener noreferrer">
             <img src="./icons/tiktok.svg" alt="TikTok">
           </a>
         </div>
